# deltaforge

./: .env.example  .gitignore  .restart_scheduler.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  cli.py  healthcheck.sh  main.py  pyproject.toml  requirements.txt  run_monitored.sh  run_multi_asset.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
alerts/: __init__.py  command_listener.py  imessage_bot.py  slack_bot.py  telegram_bot.py
automation/: com.deltaforge.wake.plist  com.tradingagent.daily.plist  daily_scheduler.py  trade_monitor.py
backtest/: cdgr_leak_analysis.py  cdgr_optimizer.py  check_today.py  comparison_study.py  data_fetcher.py  deep_analysis.py  explore_novel.py  fetch_futures_data.py  fetch_option_data.py  filter_sweep.py  optimizer.py  parameter_sensitivity.py  parameter_sweep.py  pullback_backtest.py  real_premium_backtest.py  realistic_backtest.py  regression_test.py  replay_live_week.py  run_6month.py  run_backtest.py  runner_backtest.py  strategy_isolation.py  strategy_sweep.py  structural_scenarios.py  sweep_pullback.py  test_adaptive.py  test_wr_scenarios.py  validate_improvements.py  validation_three_periods.py  walk_forward.py  walk_forward_v2.py  walk_forward_v3.py  walk_forward_v4.py  walk_forward_v5.py  walk_forward_v6.py  walk_forward_v7.py  winrate_analysis.py
config/: holidays.json  instruments.py  logging.py  settings.py
dashboard/: __main__.py  data_access.py  models.py  routes.py  server.py  websocket.py
dashboard-mock/: index.html
docs/: architecture.md  dashboard.md  index.html  risk.md  strategy.md
engine/: broker.py  candle_builder.py  confluence.py  confluence_pruned.py  futures_model.py  indicators.py  indicators_extended.py  market_feed.py  multi_asset_engine.py  multi_strategy_engine.py  premium_model.py  pullback_engine.py  strike_selector.py  trading_engine.py
execution/: position_manager.py
persistence/: performance_db.py
reports/: __main__.py  generate.py
risk/: adaptive_mode.py  capital_tracker.py  futures_capital_tracker.py  futures_risk_engine.py  kill_switch.py  risk_engine.py  shock_detector.py
scripts/: backfill_trades_db.py  ensure_network.sh  fix_capital_once.py  healthcheck.sh  install_wake_agent.sh  rebuild_capital.py  run_monitored.sh  setup.sh
strategies/: base_strategy.py  orb_options.py  vwap_momentum.py
tests/: conftest.py  test_commands.py  test_dashboard.py  (+4 more)
(+21 files in other folders)
