[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deltaforge"
version = "2.0.0"
description = "DeltaForge -- Autonomous Nifty Options Trading System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DeltaForge Contributors"},
]
keywords = ["trading", "options", "nifty", "nse", "algo-trading", "paper-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "smartapi-python>=1.5.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "pyotp>=2.9.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "yfinance>=0.2.0",
    "slack_sdk>=3.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "httpx>=0.27.0"]
dev = ["ruff>=0.4.0", "pytest>=7.0", "httpx>=0.27.0"]

[project.urls]
Repository = "https://github.com/your-username/deltaforge"
Issues = "https://github.com/your-username/deltaforge/issues"
Changelog = "https://github.com/your-username/deltaforge/blob/main/CHANGELOG.md"

[project.scripts]
df = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = [
    "config",
    "engine",
    "risk",
    "execution",
    "automation",
    "alerts",
    "persistence",
    "strategies",
    "backtest",
    "dashboard",
    "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B028",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["config", "engine", "risk", "execution", "automation", "alerts", "persistence", "strategies", "backtest", "dashboard"]
